[143][omnibox-next] Fix alignment and color issues.
This CL fixes alignment issue for:
- The entrypoint (+) icon which wasn't aligned with suggestions.
- The close (X) button which wasn't horizontally aligned with the left icon and text.

It also fixes GM2 light and dark color for submit button icon. See
comment #5 in b/459815241 for specs.

(cherry picked from commit b730a924ff138956ca1817c98ab918eb98f37085)

Bug: 461840418
Fixed: b:461567813, b:461575363, b:459815241
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7164238
Commit-Queue: Teresa Mao <temao@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1546243}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7169515
Owners-Override: Srinivas Sista <srinivassista@chromium.org>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7499@{#2309}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/chrome/browser/resources/omnibox_popup/aim_app.css
+++ b/chrome/browser/resources/omnibox_popup/aim_app.css
@@ -23,6 +23,7 @@
   --cr-composebox-max-height: 800px;
   --cr-composebox-text-container-padding-block-start: 0;
   --search-animated-glif-rotation-duration: 2000ms;
+  --cr-composebox-cancel-button-top: 5px;
 }
 
 cr-composebox {
@@ -41,7 +42,7 @@ cr-composebox {
   --color-composebox-pdf-chip-icon: var(--color-omnibox-text-subtle);
   --color-composebox-recent-tab-chip-outline: unset; /* Omnibox has no recent tab chip. */
   --color-composebox-scrim-background: unset; /* No scrim. */
-  --color-composebox-submit-button-background: var(--color-sys-primary);
+  --color-composebox-submit-button-background: var(--color-omnibox-composebox-submit-button-background);
   --color-composebox-submit-button-icon: var(--color-omnibox-composebox-submit-button-icon);
   --color-composebox-submit-button-hover: var(--color-omnibox-action-icon-hover);
   --color-composebox-suggestion-activity: unset; /* No activity suggestion disclaimer. */
@@ -59,5 +60,6 @@ cr-composebox {
 
 cr-composebox[searchbox-layout-mode="Compact"]::part(context-menu-entrypoint-icon) {
   --cr-icon-button-size: 28px;
+  left: 12px;
   top: 14px;
 }
